file-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file-service
  template:
    metadata:
      labels:
        app: file-service
    spec:
      containers:
        - name: file-service
          image: file-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5004
---
apiVersion: v1
kind: Service
metadata:
  name: file-service
spec:
  selector:
    app: file-service
  ports:
    - name: grpc
      port: 5004
      targetPort: 5004
