gateway-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - name: gateway-service
          image: 324037317995.dkr.ecr.us-east-1.amazonaws.com/gateway-service:v1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  type: NodePort
  selector:
    app: gateway-service
  ports:
    - port: 4000
      targetPort: 4000
      nodePort: 30080
