interview-management-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interview-management-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: interview-management-service
  template:
    metadata:
      labels:
        app: interview-management-service
    spec:
      containers:
        - name: interview-management-service
          image: 324037317995.dkr.ecr.us-east-1.amazonaws.com/interview-management-service:v1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 5006
            - containerPort: 5007
---
apiVersion: v1
kind: Service
metadata:
  name: interview-management-service
spec:
  selector:
    app: interview-management-service
  ports:
    - name: http
      port: 5006
      targetPort: 5006
    - name: grpc
      port: 5007
      targetPort: 5007
