job-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: job-service
  template:
    metadata:
      labels:
        app: job-service
    spec:
      containers:
        - name: job-service
          image: 324037317995.dkr.ecr.us-east-1.amazonaws.com/job-service
          imagePullPolicy: Always
          ports:
            - containerPort: 5002
            - containerPort: 5015
---
apiVersion: v1
kind: Service
metadata:
  name: job-service
spec:
  selector:
    app: job-service
  ports:
    - name: http
      port: 5002
      targetPort: 5002
    - name: grpc
      port: 5015
      targetPort: 5015
