notification-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: 324037317995.dkr.ecr.us-east-1.amazonaws.com/notification-service:v1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 5020
            - containerPort: 5021
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  selector:
    app: notification-service
  ports:
    - name: http
      port: 5020
      targetPort: 5020
    - name: grpc
      port: 5021
      targetPort: 5021
