user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: 324037317995.dkr.ecr.us-east-1.amazonaws.com/user-service:v1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
            - containerPort: 5051
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-service
  ports:
    - name: http
      port: 5000
      targetPort: 5000
    - name: grpc
      port: 5051
      targetPort: 5051
