video-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video-service
  template:
    metadata:
      labels:
        app: video-service
    spec:
      containers:
        - name: video-service
          image: video-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5013
---
apiVersion: v1
kind: Service
metadata:
  name: video-service
spec:
  selector:
    app: video-service
  ports:
    - port: 5013
      targetPort: 5013
      protocol: TCP
  type: ClusterIP
