ingress copy 2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hirearena-ingress
  annotations:
    ingressClassName: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: hirearena.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 4000
